--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "autoprefixer": "^10.4.20",
     "next": "^15.0.1",
     "react": "^19.0.0-rc-69d4b800-20241021",
-    "react-dom": "^19.0.0-rc-69d4b800-20241021"
+    "react-dom": "^19.0.0-rc-69d4b800-20241021",
+    "recharts": "^2.13.0"
   },
   "devDependencies": {
     "@types/node": "^20",
