--- a/backend/package.json
+++ b/backend/package.json
@@ -5,18 +5,22 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node backend/src/server.js",
-    "dev": "nodemon app.js"
+    "start": "node src/server.js",
+    "dev": "node src/server.js"
   },
   "keywords": [],
-  "author": "Your Name",  
+  "author": "Your Name",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.3",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1"
+    "mssql": "^11.0.1"
   },
   "devDependencies": {
+    "axios": "^1.7.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7"
   }
 }
